--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -419,3 +419,32 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/285496125/
         dtstart: 2022-05-31 18:00:00+02:00
         dtend: 2022-05-31 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Jun 15, 6:00 PM  CEST: **Productboard GraphQL Meetups are back!**
+
+
+        **Join us for our next meetup. Please register via Eventbrite:**
+
+        https://www.eventbrite.com/e/graphql-meetup-tickets-33276805721'
+      og_title: GraphQL Meetup, Wed, Jun 15, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/productboard-meetups/events/286180415/
+      ical:
+        summary: GraphQL Meetup
+        description: 'Productboard Meetups
+
+          Wednesday, June 15 at 6:00 PM
+
+
+          **Productboard GraphQL Meetups are back!** **Join us for our next meetup. Please register via Eventbrite:**https://www.eventbrite.com/e/graphql-meetup...
+
+
+          https://www.meetup.com/productboard-meetups/events/286180415/'
+        location: Boudníkova 3 (Boudníkova 3, Praha 8-Palmovka, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286180415@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286180415/
+        dtstart: 2022-06-15 18:00:00+02:00
+        dtend: 2022-06-15 21:00:00+02:00
