--- a/data/sources/prague-golang.yaml
+++ b/data/sources/prague-golang.yaml
@@ -3029,3 +3029,57 @@ series:
         url: https://www.meetup.com/Prague-Golang-Meetup/events/278200916/
         dtstart: 2021-06-23 18:00:00+02:00
         dtend: 2021-06-23 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, May 31, 6:00 PM  CEST: Join us for our in-person and online meetup at Productboard HQ! We’re excited to host **our first Golang Meetup** **of 2022**!
+
+
+        **🚨 Please [register via Eventbrite](https:'
+      og_title: 'Go Meetup in Prague #7, Tue, May 31, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/prague-golang-meetup/events/285491798/
+      ical:
+        summary: 'Go Meetup in Prague #7'
+        description: 'Prague Golang Meetup
+
+          Tuesday, May 31 at 6:00 PM
+
+
+          Join us for our in-person and online meetup at Productboard HQ! We’re excited to host **our first Golang Meetup** **of 2022**! **🚨 Please (https://www...
+
+
+          https://www.meetup.com/Prague-Golang-Meetup/events/285491798/'
+        location: Productboard s.r.o. (Boudníkova 3, Praha 8-Palmovka, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285491798@meetup.com
+        url: https://www.meetup.com/Prague-Golang-Meetup/events/285491798/
+        dtstart: 2022-05-31 18:00:00+02:00
+        dtend: 2022-05-31 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Jun 23, 6:00 PM  CEST: In the Golang Prague Meetup #6 we will focus on the process of learning Go and programming languages in general.
+
+
+        We are joined by a fantastic guest Jon Calhoun. Jon is a f'
+      og_title: 'Golang Prague #6 with Jon Calhoun - Learning Go, Wed, Jun 23, 2021, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/prague-golang-meetup/events/278200916/
+      ical:
+        summary: 'Golang Prague #6 with Jon Calhoun - Learning Go'
+        description: 'Prague Golang Meetup
+
+          Wednesday, June 23 at 6:00 PM
+
+
+          In the Golang Prague Meetup #6 we will focus on the process of learning Go and programming languages in general. We are joined by a fantastic guest Jo...
+
+
+          https://www.meetup.com/Prague-Golang-Meetup/events/278200916/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_278200916@meetup.com
+        url: https://www.meetup.com/Prague-Golang-Meetup/events/278200916/
+        dtstart: 2021-06-23 18:00:00+02:00
+        dtend: 2021-06-23 20:00:00+02:00
