data: cron update

--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/PyData-Prague/
+    url: https://www.meetup.com/pydata-prague/
     meta_description: PyData Prague aims to unite data analysts, engineers, scientists, and others involved in the usage, developments, and support of open source technologies in the area of scientific computation. These i
     og_title: PyData Prague (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/a/e/9/d/600_503684701.jpeg
