--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/TopMonks-Caffe/
+    url: https://www.meetup.com/topmonks-caffe/
     meta_description: Regular meetup focused on new technologies. For EVERYBODY who is interested into it.
     og_title: TopMonks Caffè (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/2/2/8/5/600_473768837.jpeg
