--- a/data/sources/webexpo.yaml
+++ b/data/sources/webexpo.yaml
@@ -1,7 +1,7 @@
 series:
   url: https://www.webexpo.net/
   meetupcom:
-    url: https://www.meetup.com/WebExpo/
+    url: https://www.meetup.com/webexpo/
     meta_description: WebExpo is Central Europe's largest conference covering deep tech & practical topics for developers, designers, product managers, and marketers.We are the web event of the year! The best conference fo
     og_title: WebExpo (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/d/7/b/9/600_483715225.jpeg
