--- a/data/sources/coderetreat-cz.yaml
+++ b/data/sources/coderetreat-cz.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/CodeRetreat-CZ/
+    url: https://www.meetup.com/coderetreat-cz/
     meta_description: Coderetreat je jednodenní intenzivní cvičení zaměřené na základy vývoje softwaru. Díky tomu, že vývojáři nejsou pod tlakem rychlého doručování výsledků, poskytuje Coderetreat možnost cíleně se soustře
     og_title: CodeRetreat CZ (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/3/d/7/f/600_466095743.jpeg
