--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/Morning-Talks/
+    url: https://www.meetup.com/morning-talks/
     meta_description: DataScript je autorizovaným poskytovatelem IT kurzů a certifikací. V našich školicích prostorách poskytujeme řadu vysoce odborných a respektovaných IT kurzů, specializovaných technologických školení i
     og_title: Morning Talks (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/1/1/e/4/600_479044580.jpeg
