--- a/data/sources/fsharping.yaml
+++ b/data/sources/fsharping.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/FSharping/
+    url: https://www.meetup.com/fsharping/
     meta_description: FSharping je komunita nadšenců okolo jazyka F# a funkcionálního programování. Chceme se společně učit, předávat si znalosti a společně prošlapávat cesty. Je úplně jedno, jakou úroveň znalostí a zkušen
     og_title: FSharping (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
