--- a/data/sources/gcdc-prague.yaml
+++ b/data/sources/gcdc-prague.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/GCDC-Prague/
+    url: https://www.meetup.com/gcdc-prague/
     meta_description: Google Cloud Developer Community Prague (GCDC Prague). Cílem je vytvořit místo pro online i offline setkání vývojářů, analytiků, konzultantů nebo architektů pro sdílení znalostí a zkušenosti se služba
     og_title: Google Cloud Developer Community Prague (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/d/f/b/5/600_471357269.jpeg
