--- a/data/sources/gdg-ostrava.yaml
+++ b/data/sources/gdg-ostrava.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/GDG-Ostrava/
+    url: https://www.meetup.com/gdg-ostrava/
     meta_description: Vyvíjíme s Google...Jsme součástí GUG.cz (http://www.gug.cz/cs) se zájmem o témata vývojářská a technická vzhledem ke Google technologiím, ale i dalším webovým a mobilním technologiím.
     og_title: GDG Ostrava (Ostrava, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/8/2/b/3/600_459753459.jpeg
