--- a/data/sources/msd-it.yaml
+++ b/data/sources/msd-it.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/MSD-IT-Meet-Ups/
+    url: https://www.meetup.com/msd-it-meet-ups/
     meta_description: Welcome to MSD IT Meet Ups page!We would like to invite you to meet ups focused on topics such as software engineering, data science, big data, machine learning, agile and much more. Meet ups are most
     og_title: MSD IT Meet Ups (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/c/1/9/a/600_468049562.jpeg
