--- a/data/sources/prague-dotnet-meetup.yaml
+++ b/data/sources/prague-dotnet-meetup.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/Prague-NET-Meetup/
+    url: https://www.meetup.com/prague-net-meetup/
     meta_description: A monthly meeting of Prague based professional and enthusiast .NET software developers, providing a platform to share knowledge with local community and leading technology experts. We meet for a talk,
     og_title: Dotnet Days Meetup (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/4/d/9/600_498541241.jpeg
