--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/Pure-Storage-Talks/
+    url: https://www.meetup.com/pure-storage-talks/
     meta_description: If you live in Czechia and work in the IT sector then there is a very strong chance you’ve heard about Pure Storage and our amazing new R&D centre here in Prague! We’re an Enterprise level tech firm w
     og_title: Pure Storage Talks (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/8/d/c/e/600_492396302.jpeg
