--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -1,7 +1,7 @@
 series:
   id: strv-prague
   meetupcom:
-    url: https://www.meetup.com/STRV-Meetups/
+    url: https://www.meetup.com/strv-meetups/
     meta_description: Developer & Designer Meetups:Regular technical meetings with designers and developers focused on current topics and news. We usually organize one every month and we are open to everyone who is interes
     og_title: STRV Meetups (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/a/f/9/0/600_469304944.jpeg
