--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/GDGPrague/
+    url: https://www.meetup.com/gdgprague/
     meta_description: GDG (Google Developer Groups) Prague organizes public events for developers in Prague. GDG Prague is part of the non-profit organization GUG.cz.We have moved our activities to Meetup very recently, so
     og_title: GDG Prague (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/8/3/c/5/600_500313733.jpeg
