--- a/data/sources/medvedi.yaml
+++ b/data/sources/medvedi.yaml
@@ -1,6 +1,6 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/Medvědi/
+    url: https://www.meetup.com/medvědi/
     meta_description: This is a group for anyone interested in Business Analysis and Architecture Design,Frontend Development (Angular, Vue.js, HTML 5, CSS, Responsive Designs, Javascript, Gulp, webpack, npm, Node.JS, Anal
     og_title: Medvědi (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/1/9/f/7/600_478206647.jpeg
