--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -278,14 +278,14 @@ series:
           Další TopMonks Caffé bude mít nosné téma ze světa crypta a to konkrétně decentrilizované finance. Povídat bude Lumír Mrkva a Dušan Kovačič.
 
 
-          https://www.meetup.com/TopMonks-Caffe/events/285524034/'
+          https://www.meetup.com/topmonks-caffe/events/285524034/'
         location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_285524034@meetup.com
-        url: https://www.meetup.com/TopMonks-Caffe/events/285524034/
+        url: https://www.meetup.com/topmonks-caffe/events/285524034/
         dtstart: 2022-05-03 19:00:00+02:00
         dtend: 2022-05-03 21:00:00+02:00
   - meetupcom:
@@ -6596,9 +6596,9 @@ series:
         Čekají nás tři přednášky:
 
 
-        1. **Miroslav Hanák** (CTO) a **Petr Novák** (R&D) (TurrisTech by CZ.NIC)
+        1. **Miroslav Hanák** (SW dev) a **Petr Novák** (R&D) (TurrisTech by CZ.NIC)
 
-        2. **Jiří Kohout*'
+        2. **Jiří Koho'
       og_title: Kyberbezpečnost, včera, dnes a zítra, Tue, Jun 7, 2022, 7:00 PM   | Meetup
       url: https://www.meetup.com/topmonks-caffe/events/286236196/
       ical:
@@ -6608,17 +6608,17 @@ series:
           Tuesday, June 7 at 7:00 PM
 
 
-          Přijďte si poslechnout přednášky na téma bezpečnost.  Čekají nás tři přednášky: 1. **Miroslav Hanák** (CTO) a **Petr Novák** (R&D) (TurrisTech by CZ.N...
+          Přijďte si poslechnout přednášky na téma bezpečnost. Čekají nás tři přednášky: 1. **Miroslav Hanák** (SW dev) a **Petr Novák** (R&D) (TurrisTech by CZ...
 
 
-          https://www.meetup.com/TopMonks-Caffe/events/286236196/'
+          https://www.meetup.com/topmonks-caffe/events/286236196/'
         location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_286236196@meetup.com
-        url: https://www.meetup.com/TopMonks-Caffe/events/286236196/
+        url: https://www.meetup.com/topmonks-caffe/events/286236196/
         dtstart: 2022-06-07 19:00:00+02:00
         dtend: 2022-06-07 21:00:00+02:00
   - meetupcom:
